adapting auth